# Lumiere-Trading

./: .env  .gitignore  README.md  compose.yml
backend/: Dockerfile  manage.py  pyproject.toml
backend/api/: asgi.py  settings.py  urls.py  wsgi.py
backend/authentication/: models.py  seriallizers.py  urls.py  views.py
backend/core/: security.py
backend/locale/en/LC_MESSAGES/: django.po
backend/trading/: apps.py  mixins.py  models.py  serializers.py  services.py  signals.py
backend/trading/models/: account_models.py  journal_models.py  trading_models.py
frontend/: Dockerfile  next.config.js  package.json  postcss.config.js  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
